# chartr

./: Cargo.toml  README.md
analyzr-cli/: Cargo.toml
analyzr-cli/src/: main.rs
analyzr-core/: Cargo.toml
analyzr-core/src/: lib.rs  render.rs
chartr/: Cargo.toml
chartr-cli/: Cargo.toml
chartr-cli/src/: main.rs
chartr-core/: Cargo.toml
chartr-core/src/: event.rs  lib.rs  render.rs
chartr-core/src/assets/: script.js  style.css
chartr/src/: lib.rs
examples/: systemd.sh
