[package]
name = "chartr-cli"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
chartr-core = { path = "../chartr-core", version = "0.1.0" }
clap = { version = "4.5.31", features = ["derive"] }

[[bin]]
name = "chartr"
path = "src/main.rs"