[package]
name = "chartr-core"
version = "0.1.0"
description = "A library for building useful charts"
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.96"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
svg = "0.18.0"
time = { version = "0.3.37", features = ["serde"] }
toml = "0.8.20"
